boreal/tests/assets/invalid_files/parsing/xor_invalid.yar
rule a {
    strings:
        $a = "a" xor(50-25)
    condition:
        $a
}
